--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </table>
 
 <script>
-  const supabase = supabasejs.createClient(
+  const supabase = supabase.createClient(
     "https://tgkwhchuoxuvitnsaqjo.supabase.co",
     "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y"
   );
