--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 </table>
 
 <script>
-  const supabase = supabase.createClient(
+  const sb = supabase.createClient(
     "https://tgkwhchuoxuvitnsaqjo.supabase.co",
     "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y"
   );
 
   async function loadParts() {
     const keyword = document.getElementById("search").value;
-    let query = supabase.from("Spare_Parts").select("*");
+    let query = sb.from("Spare_Parts").select("*");
 
     if (keyword) query = query.ilike("name", `%${keyword}%`);
 
@@ -69,7 +69,7 @@
     const quantity = document.getElementById("qty").value;
     const location = document.getElementById("loc").value;
 
-    await supabase.from("Spare_Parts").insert([
+    await sb.from("Spare_Parts").insert([
       { name, quantity, location }
     ]);
 
