--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script>
   // 1. Supabase 클라이언트 생성
-  const SUPABASE_URL = "여기에_PROJECT_URL";
-  const SUPABASE_KEY = "여기에_PUBLISHABLE_KEY";
+  const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
+  const SUPABASE_KEY = "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y";
 
   const sb = window.supabase.createClient(
     SUPABASE_URL,
