--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <script>
+  alert("스크립트 실행됨");
+  
   // 1. Supabase 클라이언트 생성
   const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
   const SUPABASE_KEY = "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y";
