--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script>
   alert("스크립트 실행됨");
+
+
+<script>
   
   // 1. Supabase 클라이언트 생성
   const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
