--- a/index.html
+++ b/index.html
@@ -45,12 +45,43 @@
 
 <h3>출고 처리</h3>
 
-<input id="out_part_id" type="number" placeholder="예비품 ID" />
+<select id="out_part_id">
+  <option value="">출고 예비품 선택</option>
+</select>
+
 <input id="out_quantity" type="number" placeholder="출고 수량" />
 <input id="out_note" placeholder="출고 사유" />
 
 <button onclick="outPart()">출고</button>
 
+/* ===== 출고용 예비품 목록 로딩 ===== */
+async function loadOutParts() {
+  const select = document.getElementById("out_part_id");
+  select.innerHTML = '<option value="">출고 예비품 선택</option>';
+
+  const { data, error } = await sb
+    .from("spare_parts")
+    .select("id, main_category, mid_category, part_name, quantity")
+    .order("main_category");
+
+  if (error) {
+    alert("출고 목록 오류: " + error.message);
+    return;
+  }
+
+  data.forEach(p => {
+    if (p.quantity > 0) {
+      const option = document.createElement("option");
+      option.value = p.id;
+      option.textContent =
+        `${p.part_name} (${p.main_category} / ${p.mid_category}) [재고:${p.quantity}]`;
+      select.appendChild(option);
+    }
+  });
+}
+
+
+  
 <!-- 목록 -->
 <table>
   <thead>
@@ -201,11 +232,13 @@ async function outPart() {
 
   alert("출고 완료");
   loadParts();
+  loadOutParts();
 }
 
 /* 시작 */
 loadMainCategory();
 loadParts();
+loadOutParts(); 
 </script>
 
 </body>
