--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@ async function loadOutParts() {
   <tbody id="list"></tbody>
 </table>
 
+<hr />
+
+<h3>출고 이력</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>출고일</th>
+      <th>대분류</th>
+      <th>중분류</th>
+      <th>예비품명</th>
+      <th>출고수량</th>
+      <th>비고</th>
+    </tr>
+  </thead>
+  <tbody id="out_log_list"></tbody>
+</table>
+
+
+  
 <script>
 /* ===== Supabase ===== */
 const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
@@ -198,6 +218,49 @@ async function savePart() {
   }
 }
 
+/* ===== 출고 이력 불러오기 ===== */
+async function loadOutLogs() {
+  const tbody = document.getElementById("out_log_list");
+  tbody.innerHTML = "";
+
+  const { data, error } = await sb
+    .from("spare_parts_logs")
+    .select(`
+      id,
+      quantity,
+      note,
+      created_at,
+      spare_parts (
+        main_category,
+        mid_category,
+        part_name
+      )
+    `)
+    .eq("type", "OUT")
+    .order("created_at", { ascending: false });
+
+  if (error) {
+    alert("출고 이력 조회 오류: " + error.message);
+    return;
+  }
+
+  data.forEach(row => {
+    tbody.innerHTML += `
+      <tr>
+        <td>${new Date(row.created_at).toLocaleString()}</td>
+        <td>${row.spare_parts?.main_category ?? ""}</td>
+        <td>${row.spare_parts?.mid_category ?? ""}</td>
+        <td>${row.spare_parts?.part_name ?? ""}</td>
+        <td>${row.quantity}</td>
+        <td>${row.note ?? ""}</td>
+      </tr>
+    `;
+  });
+}
+
+    
+
+  
 /* ===== 출고 ===== */
 async function outPart() {
   const partId = Number(out_part_id.value);
@@ -233,12 +296,15 @@ async function outPart() {
   alert("출고 완료");
   loadParts();
   loadOutParts();
+  loadOutLogs();
 }
 
+  
 /* 시작 */
 loadMainCategory();
 loadParts();
 loadOutParts(); 
+loadOutLogs();
 </script>
 
 </body>
