--- a/index.html
+++ b/index.html
@@ -187,9 +187,30 @@ async function outPart() {
   if (data.quantity < qty) return alert("재고 부족");
 
   await sb.from("spare_parts").update({ quantity: data.quantity - qty }).eq("id", id);
-  await sb.from("spare_parts_logs").insert([
-    { part_id: id, type: "OUT", quantity: qty, note: out_note.value }
-  ]);
+// 선택된 예비품 정보 가져오기
+const { data: part, error } = await sb
+  .from("spare_parts")
+  .select("main_category, mid_category, part_name")
+  .eq("id", id)
+  .single();
+
+if (error) {
+  alert("예비품 조회 오류");
+  return;
+}
+
+await sb.from("spare_parts_logs").insert([
+  {
+    part_id: id,
+    type: "OUT",
+    quantity: qty,
+    note: out_note.value,
+    main_category: part.main_category,
+    mid_category: part.mid_category,
+    part_name: part.part_name
+  }
+]);
+
 
   alert("출고 완료");
   loadParts();
@@ -199,14 +220,11 @@ async function outPart() {
 
 /* ===== 출고 이력 ===== */
 async function loadOutLogs() {
-  const { data } = await sb
-    .from("spare_parts_logs")
-    .select(`
-      quantity, note, created_at,
-      spare_parts ( main_category, mid_category, part_name )
-    `)
-    .eq("type", "OUT")
-    .order("created_at", { ascending:false });
+const { data, error } = await sb
+  .from("spare_parts_logs")
+  .select("*")
+  .eq("type", "OUT")
+  .order("created_at", { ascending: false });
 
   const tbody = document.getElementById("out_log_list");
   tbody.innerHTML = "";
@@ -214,9 +232,9 @@ async function loadOutLogs() {
     tbody.innerHTML += `
       <tr>
         <td>${new Date(r.created_at).toLocaleString()}</td>
-        <td>${r.spare_parts?.main_category ?? ""}</td>
-        <td>${r.spare_parts?.mid_category ?? ""}</td>
-        <td>${r.spare_parts?.part_name ?? ""}</td>
+        <td>${r.main_category}</td>
+        <td>${r.mid_category}</td>
+        <td>${r.part_name}</td>
         <td>${r.quantity}</td>
         <td>${r.note ?? ""}</td>
       </tr>`;
